# forbidden-bands

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
data/: config.json
examples/: hello_world.rs  petscii_to_unicode.rs  test.rs  unicode_to_petscii.rs
src/: config_data.rs  error.rs  lib.rs  petscii.rs  zscii.rs
