[package]
name = "forbidden-bands"
version = "0.2.0"
edition = "2021"
authors = ["Joshua Gerrish <jgerrish@gmail.com>"]
description = "8-bit string handling library"
keywords = ["8-bit", "unicode", "ascii", "string", "c64"]
readme = "README.md"
repository = "https://github.com/jgerrish/forbidden-bands"
homepage = "https://github.com/jgerrish/forbidden-bands"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
external-json = []

# JSON could be made an optional feature.
# This would require using a more generic Config data structure along with getting
# the binary blob data parsing working.
# Or using another configuration format such as Ron
# json = ["dep:serde", "dep:serde_json"]
# default = ["json"]

[dependencies]
enumset = {version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
# serde = { version = "1.0", features = ["derive"], optional = true }
# serde_json = { version = "1.0", optional = true }

[[example]]
name="test"

[[example]]
name="petscii_to_unicode"
